// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: subscriptions with GitHub App installed subsscribing with a bad url 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "\`wat?\` does not appear to be a GitHub link.",
    },
  ],
}
`;

exports[`Integration: subscriptions with GitHub App installed successfully subscribing and unsubscribing to a repository 1`] = `
Object {
  "attachments": Array [
    Object {
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions with GitHub App installed successfully subscribing and unsubscribing to a repository 2`] = `
Object {
  "attachments": Array [
    Object {
      "text": "Unubscribed <#C2147483705> from <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions with GitHub App installed successfully subscribing with repository shorthand 1`] = `
Object {
  "attachments": Array [
    Object {
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions without the GitHub App installed prompts to install app 1`] = `
Object {
  "attachments": Array [
    Object {
      "text": "<https://github.com/apps/slack-bkeepers|Install the GitHub App>",
    },
  ],
}
`;
